<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/txt_title"
        android:textSize="24sp"
        android:textColor="@color/blue_final"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?actionBarDivider"
        android:layout_marginVertical="16dp"
        android:contentDescription="@string/txt_bottom_sheet" />


    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/txt_message"
        android:textColor="@color/black"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password_transaction"
        style="@style/Theme.EditText"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_lock_password_line"
        android:hint="@string/hint_digit_your_password"
        android:inputType="numberPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_button_login"
        tools:text="@string/title_default_button_bottom_sheet"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>