<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="200dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_credit_card">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_bank_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_branch"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <TextView
            android:id="@+id/text_bank_branch_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_branch_number"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/text_bank_branch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_bank_branch" />

        <TextView
            android:id="@+id/text_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/inter"
            android:text="@string/txt_account"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/text_bank_branch"
            app:layout_constraintTop_toTopOf="@+id/text_bank_branch" />

        <TextView
            android:id="@+id/text_account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_account_number"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/text_account"
            app:layout_constraintStart_toStartOf="@+id/text_account"
            app:layout_constraintTop_toBottomOf="@+id/text_bank_branch" />

        <TextView
            android:id="@+id/text_security_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/inter"
            android:text="@string/txt_cod_sec"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/text_account"
            app:layout_constraintTop_toTopOf="@+id/text_account" />

        <TextView
            android:id="@+id/text_security_code_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_cod_sec_number"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_account_number"
            app:layout_constraintEnd_toEndOf="@+id/text_security_code"
            app:layout_constraintStart_toEndOf="@+id/text_account_number"
            app:layout_constraintTop_toBottomOf="@+id/text_account" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/description_logo_in_credit_card"
            android:src="@drawable/logo_app_bf"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <TextView
            android:id="@+id/text_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_credit_card"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/image_logo"
            app:layout_constraintStart_toStartOf="@+id/image_logo"
            app:layout_constraintTop_toBottomOf="@+id/image_logo" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>



